# AI-Trailblazer

./: .gitignore  Daisy - Technical.md  Makefile  README.md
chatbot-gpt/: .dockerignore  .env  Dockerfile  chatbot.js  gcp-compute-engine-service-acc-keys.json  package-lock.json  package.json  pm2.config.js  scrape.js  tsconfig.json
chatbot-gpt-frontend/: .dockerignore  .env.production.local  Dockerfile  chatInterface.js  package-lock.json  package.json  tsconfig.json
chatbot-gpt-frontend/nginx/: nginx.conf
chatbot-gpt-frontend/public/: index.html
chatbot-gpt-frontend/src/: App.js  App.tsx  custom.d.ts  index.css  index.tsx
chatbot-gpt-py/: .env  .env.production  .pylintrc  Dockerfile  README.md  pyproject.toml
chatbot-gpt-py/app/: helpers.py  main.py  typings.py
chatbot-gpt-py/app/chain/: ConversationalRetrievalChain.py  composite_chain.py  conversational_retrieval_chain.py  evaluation_chain.py
chatbot-gpt-py/app/enums/: criteria_enums.py
chatbot-gpt-py/app/prompt_templates/: eligibility_criteria_templates.py  few_shot_templates.py  fewshot_templates.py  main_templates.py  paraphrase_and_suggest_template.py  paraphrase_template.py  system_template.py
chatbot-gpt-py/app/retriever/: example_selector.py  retriever.py
chatbot-gpt-py/app/utilities/: debug.py
chatbot-gpt/src/: chatbot.ts  google-helper-file.ts
gcp-notebooks/playbooks/: composite-chain-playbook.ipynb  conversation-retrieval-chain-playbook.ipynb  custom-matching-engine.ipynb  embedding-adaptor-layer.ipynb  evaluation-chain-playbook.ipynb  generate-embedding-adapter.ipynb
(+41 files in other folders)
