[tool.poetry]
name = "chatbot-gpt-py"
version = "0.1.0"
description = ""
authors = ["tin_kit_wong <wong_tin_kit@tech.gov.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
langchain = "^0.1.9"
uvicorn = "^0.24.0.post1"
google-cloud-aiplatform = "^1.38.1"
python-dotenv = "^1.0.0"
pylint = "^3.0.3"
gunicorn = "^21.2.0"
faiss-cpu = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"